--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,13 @@ body {
 
 a{
     cursor:pointer;
+    text-decoration:none;
 }
 
 ul {
     margin: 0;
     padding: 0;
 }
-
 
 
 /*HEADER*/
@@ -255,7 +255,6 @@ ul {
     border-bottom: 3px solid;
     width: 30px;
     height: 30px;
-    cursor: pointer;
     -webkit-animation-name: updown;
     animation-name: updown;
     animation-duration: 2s;
