--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ ul {
     transition: all 0.5s ease;
 }
 
-.header__top{
+.header__top {
     opacity: 0;
 }
 
@@ -613,6 +613,79 @@ ul {
         background-color: #fff;
     }
 }
+
+/*CONTACT*/
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+}
+
+.contact__title {
+    font-size: 3em;
+    margin-top: 60px;
+}
+
+.contact__container {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+}
+
+.contact__field {
+    padding: 30px 0 0 0;
+    position: relative;
+}
+
+    .contact__field:after, .contact__field:before {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #e2e2e2;
+        bottom: 0;
+        left: 0;
+        transition: all 0.5s;
+    }
+
+    .contact__field::after {
+        background-color: #8E8DBE;
+        transform: scaleX(0);
+    }
+
+.contact__label {
+    display: block;
+    font-size: 16px;
+    transform: translateY(25px);
+    color: #e2e2e2;
+    transition: all 0.5s;
+}
+
+.contact__input {
+    position: relative;
+    background: transparent;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 8px 0;
+    font-size: 16px;
+}
+
+.contact__field-active::after {
+    transform: scaleX(1);
+}
+
+.contact__field-active .contact__label {
+    color: #8E8DBE;
+}
+
+.contact__field-completed .contact__label {
+    font-size: 12px;
+    transform: translateY(0);
+}
+
 
 /*FOOTER*/
 .footer {
